# carryon

./: Makefile
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: App.tsx
apps/desktop/src/components/: AdapterBadge.tsx  ConsentToggles.tsx  FileDrop.tsx  MemoryCard.tsx  PersonaPreview.tsx  PrimerCard.tsx  Stepper.tsx  ToneSlider.tsx
apps/desktop/src/lib/: api.ts  types.ts
apps/desktop/src/routes/: Dashboard.tsx  PrimerPreview.tsx
apps/desktop/src/routes/Adapters/: Detail.tsx  List.tsx
apps/desktop/src/routes/Memories/: Timeline.tsx
apps/desktop/src/routes/Onboarding/: ConsentPrivacy.tsx  ImportSources.tsx  PersonaBasics.tsx  ReviewPin.tsx  Start.tsx
apps/desktop/src/routes/Persona/: Studio.tsx
apps/desktop/src/routes/Settings/: Backup.tsx
examples/: sample_memories.json  sample_soulpack.json
server/: Dockerfile  README.md  pyproject.toml
server/app/: __init__.py  db.py  deps.py  main.py
server/app/core/: __init__.py  crypto.py
server/app/models/: __init__.py
server/app/retrieval/: __init__.py  graph_store.py  ranker.py  vector_index.py
server/app/routers/: memories.py  prime.py  soulpacks.py  tools.py
server/app/utils/: ids.py
server/carryon_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/tests/: test_health.py  test_prime.py
