[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carryon-server"
version = "0.1.0"
description = "CarryOn API – portable AI identity"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlmodel>=0.0.22",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "numpy>=1.26",
  "faiss-cpu>=1.7; platform_system != 'Windows'",
  "sentence-transformers>=3.0",
  "PyNaCl>=1.5",
  "python-dateutil>=2.9",
  "orjson>=3.10",
  "passlib[bcrypt]>=1.7",
  "tenacity>=8.3",
  "ruff>=0.5",
  "black>=24.4",
  "pytest>=8.2"
]

[tool.setuptools.packages.find]
include = ["app*"]